--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/MaterialPurchase/Index.cshtml
@@ -62,7 +62,7 @@
             var totalAmount = materialPurchaseVm.MaterialCost + materialPurchaseVm.DeliveryCharge;
             <tr>
                 <td>@materialPurchaseVm.Date.ToString("dd-MMMM-yyyy")</td>
-                <td>@materialPurchaseVm.SupplirName</td>
+                <td>@materialPurchaseVm.SupplierName</td>
                 <td>@materialPurchaseVm.BrandName</td>
                 <td>@materialPurchaseVm.MaterialName</td>
                 <td>@materialPurchaseVm.UnitPrice.ToString("0.00") / <i>@materialPurchaseVm.UnitOfMeasure</i></td>
