--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Contact Us</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Add"><b>Cost Master</b></a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CostMaster" asp-action="Index"><b>Cost Master</b></a>
                         </li>
                         @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DailyAttendance" asp-action="Add"><b>Daily Attendance</b></a>
