--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<ConstructionApplication.ViewModels.CostMasterVm.CostMasterVm>
 
-<h1 style="text-align: center;">Cost Master Report</h1>
+<h3 style="text-align: center;">Cost Master Report</h3>
 <br />
 <div class="bottom-section">
     <a href="https://localhost:7212/Costmaster/Add" style="text-decoration: none; padding: 10px 15px; background-color: lightgray; border-radius: 5px;">
-        <b>Add New Cost Master</b>
+        <b>Add New Cost</b>
     </a>
 </div>
 <html>
@@ -22,7 +22,7 @@
         }
 
             tr:nth-child(even) {
-                background-color: yellowgreen;
+                background-color: lightblue;
             }
 
         td {
