--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/DailyAttendance/AddUsingAjax.cshtml
@@ -20,7 +20,12 @@
                 <span asp-validation-for="TotalMasterMason" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group row" style="width: 95%;">
+            <div class="form-group row" style="width: 60%;">
+                <label asp-for="TotalLabour" class="control-label"><b>Total Labour Count</b></label>
+                <input asp-for="TotalLabour" class="form-control" />
+                <span asp-validation-for="TotalLabour" class="text-danger"></span>
+            </div>
+            @* <div class="form-group row" style="width: 95%;">
                 <div class="col-md-6">
                     <label asp-for="TotalLabour" class="control-label"><b>Total Labour Count</b></label>
                     <input asp-for="TotalLabour" class="form-control" />
@@ -29,7 +34,7 @@
                 <div class="col-md-4 d-flex align-items-center" style="margin-left: 10px;">
                     <a href="#" id="calculateCost"><b>Calculate Cost</b></a>
                 </div>
-            </div>
+            </div> *@
             <br />
             <div class="form-group" style="width: 60%;">
                 <label asp-for="TotalCount"><b>Total Count(Master Mason + Labour)</b></label>
@@ -60,6 +65,41 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        var masterMasonCost = @ViewBag.MasterMasonCost;
+        var labourCost = @ViewBag.LabourCost;
+
+        function calculateCosts() {
+            var totalMasterMason = parseInt($("#TotalMasterMason").val()) || 0;
+            var totalLabour = parseInt($("#TotalLabour").val()) || 0;
+
+            // Calculate individual and total costs
+            var masterMasonAmount = masterMasonCost * totalMasterMason;
+            var labourAmount = labourCost * totalLabour;
+            var totalAmount = masterMasonAmount + labourAmount;
+
+            // Set values to the fields
+            $("#MasterMasonAmount").val(masterMasonAmount.toFixed(2));
+            $("#LabourAmount").val(labourAmount.toFixed(2));
+            $("#TotalAmount").val(totalAmount.toFixed(2));
+        }
+
+        function calculateTotalCount() {
+            var totalMasterMason = parseInt($("#TotalMasterMason").val()) || 0;
+            var totalLabour = parseInt($("#TotalLabour").val()) || 0;
+            var totalCount = totalMasterMason + totalLabour;
+            $("#TotalCount").val(totalCount);
+        }
+
+        $("#TotalMasterMason, #TotalLabour").on('input', function () {
+            calculateTotalCount();
+            calculateCosts();
+        });
+    });
+</script>
+
+@* <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
 
@@ -92,4 +132,4 @@
             });
         });
     });
-</script>
+</script> *@
