--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 
-<div class="bg-image" style="background-image: url('/UploadedImage/Background-Image.jpg'); background-size: cover; background-position: center; height: 60vh; display: flex; justify-content: center; align-items: center;">
+<div class="bg-image" style="background-image: url('/UploadedImage/Background-Image.jpg'); background-size: cover; background-position: center; height: 30vh; display: flex; justify-content: center; align-items: center;">
     <div class="container text-center overlay-content" style="padding: 220px;">
         <h3 class="font-weight-bold">Your Partner in Construction Management</h3>
         <p class="lead">
@@ -72,11 +72,11 @@
 <footer class="bg-dark text-white mt-5">
     <div class="container py-4">
         <div class="row">
-            <div class="col-md-4">
+            @* <div class="col-md-4">
                 <h5>About Us</h5>
                 <p>India's No.1 tech-enabled construction company that aims to make construction simple, transparent, and reliable. We provide end-to-end aka design-to-build construction services.</p>
                 <p>We execute projects on a turnkey basis and provide real-time tracking, communication, quality checks, and updates on projects from day one till the handover of the keys.</p>
-            </div>
+            </div> *@
             <div class="col-md-2">
                 <h5>Menu</h5>
                 <ul class="list-unstyled">
