--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MaterialPurchase" asp-action="Index"><b>Material Report</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>About Us</b></a>
+                            <a class="nav-link text-dark" href="javascript:void(0);" onclick="toggleAboutUs()"><b>About Us</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"><b>Contact Us</b></a>
@@ -44,6 +44,13 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <div id="aboutUsContent" class="text-center mx-auto" style="display:none; padding: 10px; background-color: #add8e6; margin-top: 10px; max-width: 1000px;">
+            <p>India's No.1 tech-enabled construction company that aims to make construction simple, transparent, and reliable. We provide end-to-end aka design-to-build construction services.</p>
+            <p>We execute projects on a turnkey basis and provide real-time tracking, communication, quality checks, and updates on projects from day one till the handover of the keys.</p>
+        </div>
+    </div>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -59,5 +66,16 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script>
+        function toggleAboutUs() {
+            var aboutUsContent = document.getElementById('aboutUsContent');
+            if (aboutUsContent.style.display === "none" || aboutUsContent.style.display === "") {
+                aboutUsContent.style.display = "block";
+            } else {
+                aboutUsContent.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
