--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Views/CostMaster/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@model List<ConstructionApplication.ViewModels.CostMasterVm.CostMasterVm>
 
 <h3 style="text-align: center;">Cost Master Report</h3>
-<br />
 <div class="bottom-section">
-    <a href="https://localhost:7212/Costmaster/Add" style="text-decoration: none; padding: 10px 15px; background-color: lightgray; border-radius: 5px;">
-        <b>Add New Cost</b>
-    </a>
+    <a href="https://localhost:7212/Costmaster/Add">Add New Cost</a>
 </div>
 <html>
 <head>
@@ -14,30 +11,68 @@
             width: 100%;
             border-collapse: collapse;
             margin: 20px auto;
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        tr, td {
-            text-align: left;
-            padding: 8px;
+        tr {
+            background-color: lightblue;
         }
-
-            tr:nth-child(even) {
-                background-color: lightblue;
-            }
 
         td {
-            border: 1px solid black;
-            padding: 8px 12px;
+            padding: 8px 10px;
+            text-align: center;
+            border: 1px solid #ddd;
         }
 
         .header-row {
-            text-align: center;
+            background-color: #007bff;
+            color: white;
+            font-size: 15px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #e6f7ff;
         }
 
         .bottom-section {
             margin-top: 20px;
             text-align: right;
+            font-size: 20px;
         }
+
+        #errorMessage {
+            color: red;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .no-record {
+            background-color: lightblue;
+            text-align: center;
+            padding: 15px;
+            font-size: 18px;
+            border-radius: 10px;
+            margin: 20px auto;
+            width: 50%;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            color: white;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+
+            .btn-primary:hover {
+                background-color: #0056b3;
+            }
     </style>
 </head>
     <body>
