Pending Commit in MVC Html&JsDemo Html&JsDemo Controllers CustomerController.cs

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Customer/Index.cshtml
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Views/Customer/Index.cshtml
@@ -8,12 +8,12 @@
         <span class="text-success"><b>@ViewBag.SuccessMessage</b></span>
         <div class="form-group">
             <label asp-for="FullName" class="control-label"><b>Full Name</b></label>
-            <input asp-for="FullName" id="fullName" value="Salman" class="form-control" />
+            <input asp-for="FullName" id="fullName" value="Abid" class="form-control" />
         </div>
         <br />
         <div class="form-group">
             <label asp-for="Email" class="control-label"><b>Email</b></label>
-            <input asp-for="Email" id="email" value="salman08@gmail.com" class="form-control" />
+            <input asp-for="Email" id="email" value="abid908@gmail.com" class="form-control" />
         </div>
         <br />
         <div class="form-group">
@@ -23,7 +23,7 @@
         <br />
         <div class="form-group">
             <label asp-for="Age" class="control-label"><b>Age</b></label>
-            <input asp-for="Age" id="age" value="23" class="form-control" />
+            <input asp-for="Age" id="age" value="22" class="form-control" />
         </div>
         <br />
         <div class="form-group">
